Harden ring routes against CSRF and unsafe arm input