@@ -14,4 +14,4 @@
                    :plugins [[lein-expectations "0.0.8"]]}}
   :main bandit.simulate
   :min-lein-version "2.0.0"
-  :jvm-opts ["-Xmx2G" "-server" "-XX:+UseConcMarkSweepGC"])
+  :jvm-opts ["-Xmx2G" "-server"])
